# tree-sitter-pactum

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-pactum.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_pactum/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPactum/: pactum.h
bindings/swift/TreeSitterPactumTests/: TreeSitterPactumTests.swift
queries/: folds.scm  highlights.scm  indents.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: example.txt
